--- a/lib/isc/Makefile.am
+++ b/lib/isc/Makefile.am
@@ -65,6 +65,7 @@ libisc_la_HEADERS =			\
 	include/isc/once.h		\
 	include/isc/os.h		\
 	include/isc/parseint.h		\
+	include/isc/pause.h		\
 	include/isc/pool.h		\
 	include/isc/portset.h		\
 	include/isc/print.h		\
