--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1147,6 +1147,26 @@ unit:gcc:softhsm2.6:
     - job: gcc:softhsm2.6
       artifacts: true
 
+# Jobs for GCC builds on Fedora 34 (amd64) which execute unstable unit tests
+
+gcc:fedora:34:amd64:
+  variables:
+    CC: gcc
+    EXTRA_CONFIGURE: "--with-libidn2"
+  <<: *fedora_34_amd64_image
+  <<: *build_job
+  <<: *schedules_tags_web_triggering_rules
+
+unstable:unit:gcc:fedora:34:amd64:
+  <<: *fedora_34_amd64_image
+  <<: *unit_test_job
+  <<: *schedules_tags_web_triggering_rules
+  variables:
+    CI_ENABLE_ALL_TESTS: 1
+  needs:
+    - job: gcc:fedora:34:amd64
+      artifacts: true
+
 # Jobs for Clang builds on FreeBSD 11 (amd64)
 
 clang:freebsd11:amd64:
