Check ZONEMD records when loading a zone

--- a/bin/tests/system/autosign/ns1/named.conf.in
+++ b/bin/tests/system/autosign/ns1/named.conf.in
@@ -41,6 +41,7 @@ zone "." {
 	allow-update { any; };
 	auto-dnssec maintain;
 	dnssec-dnskey-kskonly no;
+	zonemd-check no;
 };
 
 include "trusted.conf";
