Update ZONEMD records as part of UPDATE processing
dns_update_zonemd() has been added update ZONEMD records.

dns_update_signaturesinc() has been extended to update (via
dns_update_zonemd) and sign ZONEMD records.

--- a/bin/tests/system/nsupdate/ns3/named.conf.in
+++ b/bin/tests/system/nsupdate/ns3/named.conf.in
@@ -69,3 +69,9 @@ zone "multisigner.test" {
 	dnssec-policy "default";
 	file "multisigner.test.db";
 };
+
+zone "zonemd.test" {
+	type primary;
+	allow-update { any; };
+	file "zonemd.test.db.signed";
+};
