--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,15 +124,15 @@ stages:
   <<: *linux_amd64
 
 .debian-buster-amd64: &debian_buster_amd64_image
-  image: "$CI_REGISTRY_IMAGE:debian-buster-amd64"
-  <<: *linux_amd64
-
-.debian-buster-amd64cross32: &debian_buster_amd64cross32_image
-  image: "$CI_REGISTRY_IMAGE:debian-buster-amd64cross32"
+  image: "$CI_REGISTRY_IMAGE-staging:debian-buster-amd64"
   <<: *linux_amd64
 
 .debian-bullseye-amd64: &debian_bullseye_amd64_image
-  image: "$CI_REGISTRY_IMAGE:debian-bullseye-amd64"
+  image: "$CI_REGISTRY_IMAGE-staging:debian-bullseye-amd64"
+  <<: *linux_amd64
+
+.debian-bullseye-amd64cross32: &debian_bullseye_amd64cross32_image
+  image: "$CI_REGISTRY_IMAGE-staging:debian-bullseye-amd64cross32"
   <<: *linux_amd64
 
 .debian-sid-amd64: &debian_sid_amd64_image
@@ -169,7 +169,7 @@ stages:
 # This is a meta image that is used as a base for non-specific jobs
 
 .base: &base_image
-  <<: *debian_buster_amd64_image
+  <<: *debian_bullseye_amd64_image
 
 ### QCOW2 Image Templates
 
@@ -524,7 +524,7 @@ tarball-create:
     - job: autoreconf
       artifacts: true
 
-# Jobs for doc builds on Debian 10 "buster" (amd64)
+# Jobs for doc builds on Debian 11 "bullseye" (amd64)
 
 docs:
   <<: *release_branch_triggering_rules
@@ -664,14 +664,16 @@ unit:gcc:stretch:amd64:
 gcc:buster:amd64:
   variables:
     CC: gcc
-    CFLAGS: "${CFLAGS_COMMON} --coverage -O0"
-    EXTRA_CONFIGURE: "--with-libidn2 ${WITH_READLINE_LIBEDIT}"
+    CFLAGS: "${CFLAGS_COMMON}"
+    EXTRA_CONFIGURE: "--with-libidn2"
   <<: *debian_buster_amd64_image
   <<: *build_job
+  <<: *schedules_tags_web_triggering_rules
 
 system:gcc:buster:amd64:
   <<: *debian_buster_amd64_image
   <<: *system_test_gcov_job
+  <<: *schedules_tags_web_triggering_rules
   needs:
     - job: unit:gcc:buster:amd64
       artifacts: true
@@ -679,6 +681,7 @@ system:gcc:buster:amd64:
 unit:gcc:buster:amd64:
   <<: *debian_buster_amd64_image
   <<: *unit_test_gcov_job
+  <<: *schedules_tags_web_triggering_rules
   needs:
     - job: gcc:buster:amd64
       artifacts: true
@@ -688,8 +691,8 @@ unit:gcc:buster:amd64:
 gcc:bullseye:amd64:
   variables:
     CC: gcc
-    CFLAGS: "${CFLAGS_COMMON} -O2"
-    EXTRA_CONFIGURE: "--without-gssapi --with-libidn2"
+    CFLAGS: "${CFLAGS_COMMON} --coverage -O0"
+    EXTRA_CONFIGURE: "--without-gssapi --with-libidn2 ${WITH_READLINE_LIBEDIT}"
   <<: *debian_bullseye_amd64_image
   <<: *build_job
 
@@ -707,32 +710,32 @@ unit:gcc:bullseye:amd64:
     - job: gcc:bullseye:amd64
       artifacts: true
 
-# Jobs for cross-compiled GCC builds on Debian 10 "buster" (amd64) with
+# Jobs for cross-compiled GCC builds on Debian 11 "bullseye" (amd64) with
 # 32-bit libraries
 
-gcc:buster:amd64cross32:
+gcc:bullseye:amd64cross32:
   variables:
     CFLAGS: "${CFLAGS_COMMON}"
     CROSS_COMPILATION: 1
     EXTRA_CONFIGURE: "--build=x86_64-linux-gnu --host=i686-linux-gnu --with-libidn2 ${WITH_READLINE_LIBEDIT}"
-  <<: *debian_buster_amd64cross32_image
+  <<: *debian_bullseye_amd64cross32_image
   <<: *build_job
 
-system:gcc:buster:amd64cross32:
-  <<: *debian_buster_amd64cross32_image
+system:gcc:bullseye:amd64cross32:
+  <<: *debian_bullseye_amd64cross32_image
   <<: *system_test_job
   needs:
-    - job: gcc:buster:amd64cross32
+    - job: gcc:bullseye:amd64cross32
       artifacts: true
 
-unit:gcc:buster:amd64cross32:
-  <<: *debian_buster_amd64cross32_image
+unit:gcc:bullseye:amd64cross32:
+  <<: *debian_bullseye_amd64cross32_image
   <<: *unit_test_job
   needs:
-    - job: gcc:buster:amd64cross32
+    - job: gcc:bullseye:amd64cross32
       artifacts: true
 
-# Jobs for scan-build builds on Debian 10 "buster" (amd64)
+# Jobs for scan-build builds on Debian 11 "bullseye" (amd64)
 
 .scan_build: &scan_build
   - ${SCAN_BUILD} --html-title="BIND 9 ($CI_COMMIT_SHORT_SHA)"
@@ -826,7 +829,7 @@ unit:gcc:out-of-tree:
   <<: *unit_test_job
   <<: *schedules_tags_web_triggering_rules
 
-# Jobs for tarball GCC builds on Debian 10 "buster" (amd64)
+# Jobs for tarball GCC builds on Debian 11 "bullseye" (amd64)
 
 gcc:tarball:
   variables:
@@ -1040,27 +1043,27 @@ unit:clang:tsan:
     - job: clang:tsan
       artifacts: true
 
-# Jobs for Clang builds on Debian 10 "buster" (amd64)
+# Jobs for Clang builds on Debian 11 "bullseye" (amd64)
 
-clang:buster:amd64:
+clang:bullseye:amd64:
   variables:
     CC: ${CLANG}
     CFLAGS: "${CFLAGS_COMMON} -Wenum-conversion"
-  <<: *debian_buster_amd64_image
+  <<: *debian_bullseye_amd64_image
   <<: *build_job
 
-system:clang:buster:amd64:
-  <<: *debian_buster_amd64_image
+system:clang:bullseye:amd64:
+  <<: *debian_bullseye_amd64_image
   <<: *system_test_job
   needs:
-    - job: clang:buster:amd64
+    - job: clang:bullseye:amd64
       artifacts: true
 
-unit:clang:buster:amd64:
-  <<: *debian_buster_amd64_image
+unit:clang:bullseye:amd64:
+  <<: *debian_bullseye_amd64_image
   <<: *unit_test_job
   needs:
-    - job: clang:buster:amd64
+    - job: clang:bullseye:amd64
       artifacts: true
 
 # Jobs for Clang builds on FreeBSD 11 (amd64)
@@ -1414,7 +1417,7 @@ gcov:
   <<: *default_triggering_rules
   stage: postcheck
   needs:
-    - job: system:gcc:buster:amd64
+    - job: system:gcc:bullseye:amd64
       artifacts: true
   script:
     # *.gcno and *.gcda files generated for shared library objects are created
