Improve the clang-format and clang-tidy integration
1. Update util/run-clang-tidy.py to clang-tidy-13 version

   The util/run-clang-tidy.py contains extra code that fixes up the file
   paths, so run-clang-tidy actually works.  The problem is that the
   run-clang-tidy expects to work from a "base" directory and strips
   directory from the compilation database.  Our copy of
   run-clang-tidy.py contains a little path fixer.

2. Add util/run-clang-tidy.sh script that can be used to run clang-tidy
   on the compilation database.  The compilation database can be created
   by running:

    autoreconf -fi
    ./configure --enable-developer
    make bind.keys.h
    (cd lib/dns && \
     make gen include/dns/enumtype.h \
              include/dns/enumclass.h \
              include/dns/rdatastruct.h \
              code.h)
    (make -nwk all || true) | compiledb

3. Add util/run-clang-format.sh to format the headers differently from
   the source code.

   Previously, the header directories included a custom .clang-format
   file that was symlinked to .clang-format.headers in the base
   directory.  This was prone to diverge from the main .clang-format
   file and it was hard to maintain.  As the clang-format now include
   option to have a style based in parent config and this can be
   specified on the command line, we utilized this to first format all
   the '*.c' files and then add extra three options to format '*.h'
   files.

4. Reduce the .clang-format file to minimal diff from LLVM coding
   style.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ variables:
   SCAN_BUILD: scan-build-13
   ASAN_SYMBOLIZER_PATH: /usr/lib/llvm-13/bin/llvm-symbolizer
   CLANG_FORMAT: clang-format-13
+  CLANG_TIDY: clang-tidy-13
+  CLANG_APPLY_REPLACEMENTS: clang-clang-apply-replacements-13
 
   CFLAGS_COMMON: -fno-omit-frame-pointer -fno-optimize-sibling-calls -O1 -g -Wall -Wextra 
 
@@ -382,6 +384,8 @@ stages:
   stage: postcheck
   script:
     - *configure
+    - (make bind.keys.h)
+    - (cd lib/dns && make gen include/dns/enumtype.h include/dns/enumclass.h include/dns/rdatastruct.h code.h)
     - (make -nwk all || true) | compiledb
     - export GCC_VERSION=$(gcc --version | sed -n 's/.* \([0-9]\+\)\.[0-9]\+\.[0-9]\+.*/\1/p')
     - sed -i "/gcc\",/a\"-DCPPCHECK\", \"-D__STDC__\", \"-D__GNUC__=${GCC_VERSION}\"," compile_commands.json
@@ -437,11 +441,18 @@ misc:
     expire_in: "1 day"
     when: on_failure
 
-clang-format:
-  <<: *precheck_job
+clang-tidy:
+  <<: *default_triggering_rules
+  <<: *base_image
+  stage: postcheck
   needs: []
   script:
-    - if [ -r .clang-format ]; then "${CLANG_FORMAT}" -i -style=file $(git ls-files '*.c' '*.h'); fi
+    - *configure
+    - (make bind.keys.h)
+    - (cd lib/dns && make gen include/dns/enumtype.h include/dns/enumclass.h include/dns/rdatastruct.h code.h)
+    - (make -nwk all || true) | compiledb
+    - if [ -r .clang-format ]; then ./util/run-clang-tidy.sh; fi
+    - if [ -r .clang-format ]; then ./util/run-clang-format.sh; fi
     - if test "$(git status --porcelain | grep -Ev '\?\?' | wc -l)" -gt "0"; then git status --short; exit 1; fi
 
 coccinelle:
