Extend synthfromdnssec to check insecure responses
add matching tests against a insecure zone to those which
which are synthesised.

--- a/bin/tests/system/synthfromdnssec/ns1/named.conf.in
+++ b/bin/tests/system/synthfromdnssec/ns1/named.conf.in
@@ -34,6 +34,11 @@ zone "example" {
 	file "example.db.signed";
 };
 
+zone "insecure.example" {
+	type primary;
+	file "insecure.example.db.signed";
+};
+
 zone "dnamed" {
 	type primary;
 	file "dnamed.db.signed";
