Check that minimal NSEC records are not cached
construct a test zone which contains a minimal NSEC record,
emit priming queries for this record, and then check that
a respose that would be synthesised from it isn't.

--- a/bin/tests/system/synthfromdnssec/ns1/named.conf.in
+++ b/bin/tests/system/synthfromdnssec/ns1/named.conf.in
@@ -44,4 +44,9 @@ zone "dnamed" {
 	file "dnamed.db.signed";
 };
 
+zone "minimal" {
+	type primary;
+	file "minimal.db.signed";
+};
+
 include "trusted.conf";
