--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -609,12 +609,13 @@ unit:gcc:oraclelinux7:amd64:
       artifacts: true
 
 # Jobs for scheduled GCC builds on Oracle Linux 7 (amd64) with FIPS mode
+# enabled
 
 gcc:fips:amd64:
   variables:
     CC: gcc
     CFLAGS: "${CFLAGS_COMMON}"
-    EXTRA_CONFIGURE: "--enable-dnstap --with-libidn2 --enable-fips-mode"
+    EXTRA_CONFIGURE: "--with-libidn2 --enable-fips-mode"
   <<: *oraclelinux_7_amd64_image
   <<: *build_job
   only:
