--- a/bin/tests/system/synthfromdnssec/ns5/named.conf.in
+++ b/bin/tests/system/synthfromdnssec/ns5/named.conf.in
@@ -34,6 +34,10 @@ controls {
 	inet 10.53.0.5 port @CONTROLPORT@ allow { any; } keys { rndc_key; };
 };
 
+statistics-channels {
+	inet 10.53.0.5 port @EXTRAPORT1@ allow { any; };
+};
+
 zone "." {
 	type hint;
 	file "root.hints";
