--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,7 @@ stages:
 # Alpine Linux
 
 .alpine-3.14-amd64: &alpine_3_14_amd64_image
-  image: "$CI_REGISTRY_IMAGE:alpine-3.14-amd64"
+  image: "$CI_REGISTRY_IMAGE-staging:alpine-3.14-amd64"
   <<: *linux_amd64
 
 # Oracle Linux
@@ -576,7 +576,7 @@ push:docs:
 gcc:alpine3.14:amd64:
   variables:
     CC: gcc
-    CFLAGS: "${CFLAGS_COMMON}"
+    CFLAGS: "${CFLAGS_COMMON} -DOPENSSL_SUPPRESS_DEPRECATED"
   <<: *alpine_3_14_amd64_image
   <<: *build_job
 
