--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,12 +140,12 @@ stages:
 
 # Fedora
 
-.fedora-34-amd64: &fedora_34_amd64_image
-  image: "$CI_REGISTRY_IMAGE:fedora-34-amd64"
+.fedora-35-amd64: &fedora_35_amd64_image
+  image: "$CI_REGISTRY_IMAGE-staging:fedora-35-amd64"
   <<: *linux_amd64
 
-.fedora-34-arm64: &fedora_34_arm64_image
-  image: "$CI_REGISTRY_IMAGE:fedora-34-arm64"
+.fedora-35-arm64: &fedora_35_arm64_image
+  image: "$CI_REGISTRY_IMAGE-staging:fedora-35-arm64"
   <<: *linux_stress_arm64
 
 # Ubuntu
@@ -934,18 +934,18 @@ gcc:asan:
     CFLAGS: "${CFLAGS_COMMON} -fsanitize=address,undefined"
     LDFLAGS: "-fsanitize=address,undefined"
     EXTRA_CONFIGURE: "--with-libidn2 --without-jemalloc"
-  <<: *fedora_34_amd64_image
+  <<: *fedora_35_amd64_image
   <<: *build_job
 
 system:gcc:asan:
-  <<: *fedora_34_amd64_image
+  <<: *fedora_35_amd64_image
   <<: *system_test_job
   needs:
     - job: gcc:asan
       artifacts: true
 
 unit:gcc:asan:
-  <<: *fedora_34_amd64_image
+  <<: *fedora_35_amd64_image
   <<: *unit_test_job
   needs:
     - job: gcc:asan
@@ -982,13 +982,13 @@ gcc:tsan:
     CFLAGS: "${CFLAGS_COMMON} -fsanitize=thread"
     LDFLAGS: "-fsanitize=thread"
     EXTRA_CONFIGURE: "--with-libidn2 --enable-pthread-rwlock --without-jemalloc"
-  <<: *fedora_34_amd64_image
+  <<: *fedora_35_amd64_image
   <<: *build_job
 
 system:gcc:tsan:
   variables:
     TSAN_OPTIONS: ${TSAN_OPTIONS_COMMON}
-  <<: *fedora_34_amd64_image
+  <<: *fedora_35_amd64_image
   <<: *system_test_tsan_job
   needs:
     - job: gcc:tsan
@@ -997,7 +997,7 @@ system:gcc:tsan:
 unit:gcc:tsan:
   variables:
     TSAN_OPTIONS: ${TSAN_OPTIONS_COMMON}
-  <<: *fedora_34_amd64_image
+  <<: *fedora_35_amd64_image
   <<: *unit_test_tsan_job
   needs:
     - job: gcc:tsan
@@ -1315,8 +1315,8 @@ respdiff:
     when: always
   timeout: 2h
 
-stress:authoritative:fedora:34:amd64:
-  <<: *fedora_34_amd64_image
+stress:authoritative:fedora:35:amd64:
+  <<: *fedora_35_amd64_image
   <<: *linux_stress_amd64
   <<: *stress_job
   variables:
@@ -1329,8 +1329,8 @@ stress:authoritative:fedora:34:amd64:
     variables:
       - $CI_COMMIT_TAG || ($BIND_STRESS_TEST_OS =~ /linux/i && $BIND_STRESS_TEST_MODE =~ /authoritative/i && $BIND_STRESS_TEST_ARCH =~ /amd64/i)
 
-stress:recursive:fedora:34:amd64:
-  <<: *fedora_34_amd64_image
+stress:recursive:fedora:35:amd64:
+  <<: *fedora_35_amd64_image
   <<: *linux_stress_amd64
   <<: *stress_job
   variables:
@@ -1343,8 +1343,8 @@ stress:recursive:fedora:34:amd64:
     variables:
       - $CI_COMMIT_TAG || ($BIND_STRESS_TEST_OS =~ /linux/i && $BIND_STRESS_TEST_MODE =~ /recursive/i && $BIND_STRESS_TEST_ARCH =~ /amd64/i)
 
-stress:authoritative:fedora:34:arm64:
-  <<: *fedora_34_arm64_image
+stress:authoritative:fedora:35:arm64:
+  <<: *fedora_35_arm64_image
   <<: *linux_stress_arm64
   <<: *stress_job
   variables:
@@ -1357,8 +1357,8 @@ stress:authoritative:fedora:34:arm64:
     variables:
       - $CI_COMMIT_TAG || ($BIND_STRESS_TEST_OS =~ /linux/i && $BIND_STRESS_TEST_MODE =~ /authoritative/i && $BIND_STRESS_TEST_ARCH =~ /arm64/i)
 
-stress:recursive:fedora:34:arm64:
-  <<: *fedora_34_arm64_image
+stress:recursive:fedora:35:arm64:
+  <<: *fedora_35_arm64_image
   <<: *linux_stress_arm64
   <<: *stress_job
   variables:
