Copy rbtdb to a separate database implementation
Copy rbtdb to zdb, a new database implementation that is meant to be
a backend for authoritative zones. The rbtdb will still be used as the
cache db.

This commit just copies the database and registers the new built-in
'zdb' database implementation.

--- a/lib/dns/Makefile.am
+++ b/lib/dns/Makefile.am
@@ -240,6 +240,8 @@ libdns_la_SOURCES =			\
 	validator.c			\
 	view.c				\
 	xfrin.c				\
+	zdb.h				\
+	zdb.c				\
 	zone.c				\
 	zoneverify.c			\
 	zonekey.c			\
