--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -663,7 +663,7 @@ gcc:buster:amd64:
     CC: gcc
     CFLAGS: "${CFLAGS_COMMON} --coverage -O0"
     SOFTHSM2_MODULE: "/usr/lib/softhsm/libsofthsm2.so"
-    EXTRA_CONFIGURE: "--with-libidn2 ${WITH_READLINE_LIBEDIT}"
+    EXTRA_CONFIGURE: "--with-libidn2 ${WITH_READLINE_LIBEDIT} --without-jemalloc"
   <<: *debian_buster_amd64_image
   <<: *build_job
 
@@ -800,7 +800,7 @@ gcc:out-of-tree:
     CC: gcc
     CFLAGS: "${CFLAGS_COMMON} -Og"
     CONFIGURE: "${CI_PROJECT_DIR}/configure"
-    EXTRA_CONFIGURE: "--with-libidn2 --with-lmdb"
+    EXTRA_CONFIGURE: "--with-libidn2 --with-lmdb --without-jemalloc"
     RUN_MAKE_INSTALL: 1
     OUT_OF_TREE_WORKSPACE: /tmp/out_of_tree_workspace
   <<: *base_image
@@ -832,7 +832,7 @@ unit:gcc:out-of-tree:
 gcc:tarball:
   variables:
     CC: gcc
-    EXTRA_CONFIGURE: "--with-libidn2"
+    EXTRA_CONFIGURE: "--with-libidn2 --without-jemalloc"
     RUN_MAKE_INSTALL: 1
   <<: *base_image
   <<: *build_job
@@ -1060,6 +1060,7 @@ clang:buster:amd64:
     CC: ${CLANG}
     CFLAGS: "${CFLAGS_COMMON} -Wenum-conversion"
     SOFTHSM2_MODULE: "/usr/lib/softhsm/libsofthsm2.so"
+    EXTRA_CONFIGURE: "--without-jemalloc"
   <<: *debian_buster_amd64_image
   <<: *build_job
 
